# TestCmakeLinuxSocket

./: Readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/rexih/android/testjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cn/rexih/android/testjni/: JniManager.java  MainActivity.java
app/src/main/java/cn/rexih/android/testjni/service/: ServerSocketService.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/rexih/android/testjni/: ExampleUnitTest.java
java_socket/src/main/java/cn/rexih/android/javasocket/: SocketClient.java  SocketMain.java
jnilib/: build.gradle
jnilib/src/androidTest/java/cn/rexih/android/jnilib/: ExampleInstrumentedTest.java
jnilib/src/main/: AndroidManifest.xml
jnilib/src/main/cpp/: CMakeLists.txt
jnilib/src/main/cpp/main/: CMakeLists.txt  my-jni.cpp
jnilib/src/main/cpp/main/include/: my-jni.h
jnilib/src/main/cpp/myint/: CMakeLists.txt  my-int.cpp
jnilib/src/main/cpp/myint/include/: my-int.h
jnilib/src/main/cpp/mylong/: CMakeLists.txt  my-long.cpp
jnilib/src/main/cpp/mylong/include/: my-long.h
jnilib/src/main/res/values/: strings.xml
jnilib/src/test/java/cn/rexih/android/jnilib/: ExampleUnitTest.java
